The Grinder 3.1.1 (not yet released)
------------------------------------

  Added net.grinder.ScriptContext.startWorkerThread() method which scripts can
  use to start additional worker threads.

  Fix bug 2018168 - HTTP filter generates invalid Jython variable
  names.

  Address bug 2058502 - Add example script showing how to ramp up threads.
  Thanks to Travis Bear for the prompt.

  Fix bug 2092881 - Agents do not start first time after reset if console
  overrides consoleHost or consolePort properties. Thanks to HappySpaceInvader
  for the report.

  Fix bug 2138601 - Moving table columns results in incorrect formatting.
  Thanks to Walter Tuvell for the report.

  Add stream based versions of POST, PUT, OPTIONS to HTTPRequest. This allows
  arbitrarily large amount of data can be sent without requiring a
  corresponding amount of memory. Thanks to Walter Tuvell for the suggestion.

  Fix bug 1576609 - "Accept Cookie" rules too strict. I've relaxed the
  rules about what cookie domains are acceptable to The Grinder, better to
  align it with current browser implementations. Thanks to Bryan Cornies for
  the report.


The Grinder 3.1
---------------

  The console now has a "-headless" option which causes it to start
  without the graphical user interface. This is useful when used with
  the console client API.

  Add ConsoleConnection.stopAgents(), requested by Andreas Spall.

  Refine console sampling model:
  - Fix bug 1618759 - Console should not discard first sample.
  - Count empty samples when deciding when to stop recording.
  - Count empty samples when triggered and ignoring samples.
  - Display sample data when triggered and ignoring samples.

  Relative paths set for grinder.script are now resolved relative to
  the location of the properties file. This fixes two bugs. - Bug
  1889281 - grinder.script relative path bug. Thanks to Ross Nicholson
  for the report, and the suggested fix. - Bug 1875880 - Script